--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ matplotlib==3.2.1
 numpy==1.22.0
 pandas==1.0.3
 python-dateutil==2.8.1
-captest
+captest==0.10
+NREL-pysam==3.0.2
 holoviews
 requests
 future
