--- a/.gitignore
+++ b/.gitignore
@@ -20,45 +20,6 @@ __pycache__/
 
 # pyenv
 .python-version
-InputFiles/WF_SAM_00.csv
-InputFiles/WF_SAM_A01.csv
-InputFiles/WF_SAM_A02.csv
-InputFiles/WF_SAM_A03.csv
-InputFiles/WF_SAM_A04.csv
-InputFiles/WF_SAM_P00.csv
-InputFiles/WF_SAM_P01.csv
-InputFiles/WF_SAM_P02.csv
-InputFiles/WF_SAM_P03.csv
-InputFiles/WF_SAM_P04.csv
-InputFiles/WF_SAM_P05.csv
-InputFiles/WF_SAM_P06.csv
-InputFiles/WF_SAM_P07.csv
-InputFiles/WF_SAM_P08.csv
-InputFiles/WF_SAM_P09.csv
-InputFiles/WF_SAM_P10.csv
-InputFiles/WF_SAM_PB00.csv
-InputFiles/WF_SAM_PB01.csv
-InputFiles/WF_SAM_PB02.csv
-InputFiles/WF_SAM_PB03.csv
-InputFiles/WF_SAM_PB04.csv
-InputFiles/WF_SAM_PB05.csv
-InputFiles/WF_SAM_PB06.csv
-InputFiles/WF_SAM_PB07.csv
-InputFiles/WF_SAM_PB08.csv
-InputFiles/WF_SAM_PB09.csv
-InputFiles/WF_SAM_PB10.csv
-InputFiles/WF_SAM_PB11.csv
-InputFiles/WF_SAM_PB12.csv
-InputFiles/WF_SAM_PB13.csv
-InputFiles/WF_SAM_PB14.csv
-InputFiles/WF_SAM_PB15.csv
-InputFiles/WF_SAM_PB16.csv
-InputFiles/WF_SAM_PB17.csv
-InputFiles/WF_SAM_PB18.csv
-InputFiles/WF_SAM_T01.csv
-InputFiles/WF_SAM_T02.csv
-InputFiles/WF_SAM_T03.csv
-InputFiles/WF_SAM_T04.csv
-InputFiles/WF_SAM_W01.csv
-InputFiles/WF_SAM_W02.csv
-InputFiles/WF_SAM_W03.csv
+InputFiles/
+TEMP/
+SAM/Results/
